# silo-smasher

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  problem-statement.md  pyproject.toml  render.yaml  requirements.txt
api/: main.py  models.py
aws/: deploy.py
aws/handlers/: pipeline_handlers.py
aws/step_functions/: state_machine.json
data/incident/: http_500_after_deploy.json
data/internal_signals/: incident_war_room_messages.json  slack_messages.json  uk_shipping_incident_messages.json
demo/: run_demo.py  run_incident_demo.py
docs/: next-steps.md  phased_tool_and_api_guide.md  scripted-demo-runbook.md  system-deep-dive.md
examples/: synthetic_raw_bundle.json  uk_shipping_incident.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: ChartsFocusPanel.jsx  GuideModal.jsx  Header.jsx  InvestigatePanel.jsx  MRRChart.jsx  MetricPanel.jsx
frontend/src/lib/: data.js
mcp/: README.md  server.py
src/airbyte_synthetic_data_pipeline/: __init__.py
src/airbyte_synthetic_data_pipeline/cli/: build_agent_context.py  query_graph_rag.py  run_diagnostic_orchestrator.py  sync_graph_context.py
src/airbyte_synthetic_data_pipeline/finance/: __init__.py  variance_client.py
src/airbyte_synthetic_data_pipeline/graph/: __init__.py  bedrock_embedder.py  store.py
src/airbyte_synthetic_data_pipeline/guardrails/: __init__.py  fastino.py
src/airbyte_synthetic_data_pipeline/market_signals/: tavily_client.py
src/airbyte_synthetic_data_pipeline/orchestrator/: __init__.py  agent.py  config.py  tools.py
src/airbyte_synthetic_data_pipeline/pipeline/: __init__.py  ground_truth.py
src/airbyte_synthetic_data_pipeline/senso/: client.py
src/airbyte_synthetic_data_pipeline/voice_interface/: __init__.py  modulate_client.py
src/airbyte_synthetic_data_pipeline/web_navigation/: navigator_client.py
src/silo_smasher/: synthetic_sync.py
src/silo_smasher/cli/: build_agent_context.py  query_graph_rag.py  run_diagnostic_orchestrator.py  sync_graph_context.py
src/silo_smasher/context/: __init__.py  normalize.py  schemas.py
src/silo_smasher/finance/: variance_client.py
src/silo_smasher/graph/: config.py  graphrag.py
src/silo_smasher/internal_signals/: __init__.py  search.py
src/silo_smasher/market_signals/: __init__.py  (+1 more)
tests/: test_demo_scenario.py  test_health.py  test_incident_context_tool.py  test_normalize.py  test_orchestrator_fallback.py
(+18 files in other folders)
