[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "airbyte-synthetic-data-pipeline"
version = "0.1.0"
description = "Starter for pulling synthetic data through Airbyte."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "airbyte-api==0.53.0",
  "boto3==1.40.67",
  "google-genai==1.65.0",
  "neo4j==5.28.2",
  "openai>=1.0.0",
  "python-dotenv==1.2.1",
  "requests==2.32.5",
]

[project.scripts]
build-agent-context = "airbyte_synthetic_data_pipeline.cli.build_agent_context:main"
run-diagnostic-orchestrator = "airbyte_synthetic_data_pipeline.cli.run_diagnostic_orchestrator:main"
sync-graph-context = "airbyte_synthetic_data_pipeline.cli.sync_graph_context:main"
query-graph-rag = "airbyte_synthetic_data_pipeline.cli.query_graph_rag:main"

[tool.setuptools.packages.find]
where = ["src"]
